# sneaky-selenium

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  example.py  example_tor.py  pyproject.toml  tor_proxy.py
.github/: dependabot.yml
.github/workflows/: lint.yaml  publish.yaml  test.yaml
sneaky_selenium/: __init__.py  _types.py  cdp.py  chrome_app.py  chrome_runtime.py  hairline_fix.py  iframe_content_window.py  media_codecs.py  navigator_hardware.py  navigator_languages.py  navigator_permissions.py  navigator_plugins.py  navigator_user_agent_data.py  navigator_vendor.py  navigator_webdriver.py  tor.py  user_agent_override.py  utils.py  webgl_vendor.py  window_outerdimensions.py  wrapper.py
sneaky_selenium/js/: chrome.app.js  chrome.csi.js  chrome.loadTimes.js  chrome.runtime.js  eslint.config.mjs  hairline.fix.js  iframe.contentWindow.js  media.codecs.js  navigator.hardware.js  navigator.languages.js  navigator.permissions.js  navigator.plugins.js  navigator.userAgentData.js  navigator.vendor.js  navigator.webdriver.js  package.json  pnpm-lock.yaml  tsconfig.json  utils.js  webgl.vendor.js  window.outerdimensions.js
sneaky_selenium/js/src/: chrome.app.ts  chrome.csi.ts  chrome.loadTimes.ts  chrome.runtime.ts  hairline.fix.ts  iframe.contentWindow.ts  media.codecs.ts  navigator.hardware.ts  navigator.languages.ts  navigator.permissions.ts  navigator.plugins.ts  navigator.userAgentData.ts  navigator.vendor.ts  navigator.webdriver.ts  types.d.ts  utils.ts  webgl.vendor.ts  window.outerdimensions.ts
tests/: chrome_headless_with_stealth_test.py  test_modern_stealth.py
